Closed Bug 179810 Opened 23 years ago Closed 22 years ago

[FIX]nsDOMIterator::MakeList should be removed in favor of AppendList

Categories

(Core :: DOM: Editor, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.4beta

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

Since it already just calls through to AppendList, I see no real reason to keep MakeList around, do you? Let me know if you do... ;)
Attachment #119257 - Flags: superreview?(kin)
Attachment #119257 - Flags: review?(jfrancis)
Priority: -- → P1
Summary: nsDOMIterator::MakeList should be removed in favor of AppendList → [FIX]nsDOMIterator::MakeList should be removed in favor of AppendList
Target Milestone: --- → mozilla1.4beta
Attachment #119257 - Flags: superreview?(kin) → superreview+
Comment on attachment 119257 [details] [diff] [review] proposed patch.... I'm amazed anyone is looking at this stuff.
Attachment #119257 - Flags: review?(jfrancis) → review+
Fixed
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: