MakeList is redundant with AppendList.  Bug 179810, r=jfrancis, sr=kin